Increase base font size to prevent zoom-in on iOS devices

--- a/frontend/src/shared/mde/markdown-editor.module.css
+++ b/frontend/src/shared/mde/markdown-editor.module.css
@@ -43,8 +43,7 @@
 
 /* 600px */
 @media only screen and (max-width: 37.5em) {
-    .textarea,
     .preview {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
